2014-03-07  Andy Buckley  <andy.buckley@cern.ch>

	* Doc updates, and added script and current output to generate a
	PDF sets list Doxygen/HTML input from sets found on the developer
	system.

	* Add a third column to the pdfsets.index file for version
	comparison by the manager script.

2014-03-05  Andy Buckley  <andy.buckley@cern.ch>

	* Protect LHAGlue initialisation from unset Lambda values.

2014-02-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding mkindex script, to generate pdfsets.index automatically
	from metadata.

	* Adding lhapdfID (using SetIndex) to PDFSet and mapping it and
	dataversion into Python.

2014-01-29  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the SetIndex and Parent metadata fields, and updating the
	creategrids script, pdfsets.index and tomigrate files accordingly.

	* Removing the external yaml-cpp build option, and
	improving/clarifying the internal yaml-cpp build and linking.

2014-01-27  Andy Buckley  <andy.buckley@cern.ch>

	* Tweaks for better variable-passing to cmake in the bundled
	yaml-cpp build.

2014-01-22  Andy Buckley  <andy.buckley@cern.ch>

	* configure.ac: Remove opportunistic C++11 build, until this
	becomes mandatory (with removalof Boost). Anyone who wants C++11
	can explicitly set the CXXFLAGS (and DYLDFLAGS for pre-Mavericks
	Macs)

2013-12-20  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.0.5 release.

	* Internally rename libyaml-cpp.a to liblhapdf-yaml-cpp.a to
	definitely avoid picking up one from the system.

	* Adding comment and empty line support to PDF index parsing, and
	updating pdfsets.index with missing PDFs and assigning LHAPDF IDs
	to ABM12, new MRST QED and MSTW sets, new NNPDF23 QED sets, and
	the first ATLAS PDF sets.

2013-12-19  Andy Buckley  <andy.buckley@cern.ch>

	* Changing the YAML functions to operate in a mangled namespace if
	using the LHAPDF bundled version (a bit of sed and preprocessor:
	not too evil!)
